syntax = "proto3";
option java_package = "com.alipay.sofa.registry.common.model.client.pb";
option java_multiple_files = true;
option go_package = "proto";

import "PushResourcesPb.proto";
import "RegisterIdsPb.proto";
import "DeltaDigestPb.proto";

message DeltaReceivedDataBodyPb {
  map<string, PushResourcesPb> addPublishers = 1;
  map<string, RegisterIdsPb> deletePublisherRegisterIds = 2;
  map<string, DeltaDigestPb> zoneDigests = 3;
}